--- a/kafka-plugins-0.10/pom.xml
+++ b/kafka-plugins-0.10/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>kafka-plugins</artifactId>
     <groupId>io.cdap.plugin</groupId>
-    <version>2.7.0-SNAPSHOT</version>
+    <version>2.7.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
