--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>io.cdap.plugin</groupId>
   <artifactId>kafka-plugins</artifactId>
   <packaging>pom</packaging>
-  <version>2.9.0-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <description>Plugins for Apache Kafka</description>
   <url>https://github.com/data-integrations/kafka-plugins</url>
 
@@ -21,8 +21,7 @@
     </license>
   </licenses>
   <modules>
-    <module>kafka-plugins-0.8</module>
-    <module>kafka-plugins-0.10</module>
+    <module>kafka-plugins-client</module>
     <module>kafka-plugins-common</module>
   </modules>
 
@@ -84,16 +83,18 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <cdap.version>6.8.0-SNAPSHOT</cdap.version>
     <cdap.plugin.version>2.10.0-SNAPSHOT</cdap.plugin.version>
-    <spark2.version>2.3.0</spark2.version>
+    <spark3.version>3.1.2</spark3.version>
     <widgets.dir>widgets</widgets.dir>
     <docs.dir>docs</docs.dir>
-    <kafka8.version>0.8.2.2</kafka8.version>
-    <kafka10.version>0.10.2.0</kafka10.version>
-    <hadoop.version>2.3.0</hadoop.version>
+    <kafka.version>2.6.0</kafka.version>
+    <hadoop.version>2.6.0</hadoop.version>
     <netty.version>4.1.16.Final</netty.version>
     <netty-http.version>1.3.0</netty-http.version>
     <avro.version>1.8.2</avro.version>
     <main.basedir>${project.basedir}</main.basedir>
+    <logback.version>1.0.9</logback.version>
+    <slf4j.version>1.7.25</slf4j.version>
+    <jackson.version>2.10.5.1</jackson.version>
   </properties>
 
   <dependencies>
@@ -108,22 +109,6 @@
       <artifactId>cdap-etl-api-spark</artifactId>
       <version>${cdap.version}</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.cdap.cdap</groupId>
-      <artifactId>cdap-common</artifactId>
-      <version>${cdap.version}</version>
-      <scope>provided</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.twill</groupId>
-          <artifactId>twill-core</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.twill</groupId>
-          <artifactId>twill-yarn</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.cdap.cdap</groupId>
@@ -271,7 +256,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.0</version>
+      <version>3.9</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
