--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>io.cdap.plugin</groupId>
   <artifactId>kafka-plugins</artifactId>
   <packaging>pom</packaging>
-  <version>2.8.0-SNAPSHOT</version>
+  <version>2.8.0</version>
   <description>Plugins for Apache Kafka</description>
   <url>https://github.com/data-integrations/kafka-plugins</url>
 
@@ -82,8 +82,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>6.7.0-SNAPSHOT</cdap.version>
-    <cdap.plugin.version>2.9.0-SNAPSHOT</cdap.plugin.version>
+    <cdap.version>6.7.0</cdap.version>
+    <cdap.plugin.version>2.9.0</cdap.plugin.version>
     <spark2.version>2.3.0</spark2.version>
     <widgets.dir>widgets</widgets.dir>
     <docs.dir>docs</docs.dir>
