--- a/kafka-plugins-0.8/pom.xml
+++ b/kafka-plugins-0.8/pom.xml
@@ -146,7 +146,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.3.1-SNAPSHOT</version>
         <configuration>
           <instructions>
             <_exportcontents>io.cdap.plugin.*;org.apache.spark.streaming.kafka.*;
