--- a/kafka-plugins-common/pom.xml
+++ b/kafka-plugins-common/pom.xml
@@ -26,7 +26,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>2.4</version>
+        <version>2.5-SNAPSHOT</version>
         <executions>
           <execution>
             <id>test-jar</id>
