--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>6.9.0-SNAPSHOT</cdap.version>
-    <cdap.plugin.version>2.11.0-SNAPSHOT</cdap.plugin.version>
+    <cdap.version>6.9.0</cdap.version>
+    <cdap.plugin.version>2.11.0</cdap.plugin.version>
     <spark3.version>3.1.2</spark3.version>
     <widgets.dir>widgets</widgets.dir>
     <docs.dir>docs</docs.dir>
