--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>io.cdap.plugin</groupId>
   <artifactId>kafka-plugins</artifactId>
   <packaging>pom</packaging>
-  <version>3.3.1</version>
+  <version>3.3.0-SNAPSHOT</version>
   <description>Plugins for Apache Kafka</description>
   <url>https://github.com/data-integrations/kafka-plugins</url>
 
@@ -81,7 +81,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>6.9.0</cdap.version>
+    <cdap.version>6.9.1</cdap.version>
     <cdap.plugin.version>2.11.0</cdap.plugin.version>
     <spark3.version>3.1.2</spark3.version>
     <widgets.dir>widgets</widgets.dir>
