--- a/kafka-plugins-client/pom.xml
+++ b/kafka-plugins-client/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>kafka-plugins</artifactId>
     <groupId>io.cdap.plugin</groupId>
-    <version>3.2.3</version>
+    <version>3.2.4-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
