--- a/kafka-plugins-client/pom.xml
+++ b/kafka-plugins-client/pom.xml
@@ -206,7 +206,7 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.3.1</version>
+        <version>3.3.2-SNAPSHOT</version>
         <executions>
           <execution>
             <id>compile</id>
